changed overflow: scroll to overflow: auto to avoid scrollbar on windows

--- a/code/10-outputting-cart-items/src/components/Cart/Cart.module.css
+++ b/code/10-outputting-cart-items/src/components/Cart/Cart.module.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   max-height: 20rem;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .total {
